--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <version>3.0</version>
         </dependency>
 
+        <!-- Encryption of properties -->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>1.9</version>
+        </dependency>
     </dependencies>
 
     <build>
