--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,9 @@ runawayRobot:
     submitSolution: ${runawayRobot.url.requestPuzzle}&path=%s
     goToLevel: ${runawayRobot.url.requestPuzzle}&gotolevel=%d&go=Go+To+Level
   progress:
-    level: 95
+    level:
+      min: 1
+      max: 10
   credentials:
     submit:
       username: ENC(9cUMFaDPBeXLuqhpM4fxFA==)
